--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION= #mysql
-DB_HOST= #127.0.0.1
-DB_PORT= #3307
-DB_DATABASE= #petrol-delivery-system
-DB_USERNAME= #root
+DB_CONNECTION= mysql
+DB_HOST= 127.0.0.1
+DB_PORT= 3307
+DB_DATABASE= petrol-delivery-system
+DB_USERNAME= root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
